--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "forma-video-player",
+  "version": "0.0.5",
   "description": "A react native video player packaged with controls that can be customized",
   "main": "dist/index.js",
   "scripts": {
